// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scripts supports all expected scripts amp scripts object is populated 1`] = `
Object {
  "amp-access": true,
  "amp-accordion": true,
  "amp-ad": true,
  "amp-analytics": true,
  "amp-anim": true,
  "amp-audio": true,
  "amp-brid-player": true,
  "amp-brightcove": true,
  "amp-carousel": true,
  "amp-consent": true,
  "amp-dailymotion": true,
  "amp-dynamic-css-classes": true,
  "amp-embed": true,
  "amp-experiment": true,
  "amp-facebook": true,
  "amp-facebook-comments": true,
  "amp-fit-text": true,
  "amp-font": true,
  "amp-form": true,
  "amp-fx-flying-carpet": true,
  "amp-gfycat": true,
  "amp-iframe": true,
  "amp-image-lightbox": true,
  "amp-img": true,
  "amp-instagram": true,
  "amp-install-serviceworker": true,
  "amp-izlesene": true,
  "amp-jwplayer": true,
  "amp-kaltura-player": true,
  "amp-lightbox": true,
  "amp-list": true,
  "amp-live-list": true,
  "amp-mustache": true,
  "amp-o2-player": true,
  "amp-pinterest": true,
  "amp-pixel": true,
  "amp-playbuzz": true,
  "amp-reach-player": true,
  "amp-reddit": true,
  "amp-sidebar": true,
  "amp-social-share": true,
  "amp-some-made-up-thing": true,
  "amp-soundcloud": true,
  "amp-springboard-player": true,
  "amp-sticky-ad": true,
  "amp-twitter": true,
  "amp-user-notification": true,
  "amp-video": true,
  "amp-vimeo": true,
  "amp-vine": true,
  "amp-youtube": true,
}
`;

exports[`scripts supports all expected scripts mock body renders components 1`] = `
<DocumentFragment>
  <div>
    this mock component needs the amp-access script
  </div>
  <div>
    this mock component needs the amp-accordion script
  </div>
  <div>
    this mock component needs the amp-ad script
  </div>
  <div>
    this mock component needs the amp-analytics script
  </div>
  <div>
    this mock component needs the amp-anim script
  </div>
  <div>
    this mock component needs the amp-audio script
  </div>
  <div>
    this mock component needs the amp-brid-player script
  </div>
  <div>
    this mock component needs the amp-brightcove script
  </div>
  <div>
    this mock component needs the amp-carousel script
  </div>
  <div>
    this mock component needs the amp-consent script
  </div>
  <div>
    this mock component needs the amp-dailymotion script
  </div>
  <div>
    this mock component needs the amp-dynamic-css-classes script
  </div>
  <div>
    this mock component needs the amp-embed script
  </div>
  <div>
    this mock component needs the amp-experiment script
  </div>
  <div>
    this mock component needs the amp-facebook-comments script
  </div>
  <div>
    this mock component needs the amp-facebook script
  </div>
  <div>
    this mock component needs the amp-fit-text script
  </div>
  <div>
    this mock component needs the amp-font script
  </div>
  <div>
    this mock component needs the amp-form script
  </div>
  <div>
    this mock component needs the amp-fx-flying-carpet script
  </div>
  <div>
    this mock component needs the amp-gfycat script
  </div>
  <div>
    this mock component needs the amp-iframe script
  </div>
  <div>
    this mock component needs the amp-image-lightbox script
  </div>
  <div>
    this mock component needs the amp-img script
  </div>
  <div>
    this mock component needs the amp-instagram script
  </div>
  <div>
    this mock component needs the amp-install-serviceworker script
  </div>
  <div>
    this mock component needs the amp-izlesene script
  </div>
  <div>
    this mock component needs the amp-jwplayer script
  </div>
  <div>
    this mock component needs the amp-kaltura-player script
  </div>
  <div>
    this mock component needs the amp-lightbox script
  </div>
  <div>
    this mock component needs the amp-list script
  </div>
  <div>
    this mock component needs the amp-live-list script
  </div>
  <div>
    this mock component needs the amp-mustache script
  </div>
  <div>
    this mock component needs the amp-o2-player script
  </div>
  <div>
    this mock component needs the amp-pinterest script
  </div>
  <div>
    this mock component needs the amp-pixel script
  </div>
  <div>
    this mock component needs the amp-playbuzz script
  </div>
  <div>
    this mock component needs the amp-reach-player script
  </div>
  <div>
    this mock component needs the amp-reddit script
  </div>
  <div>
    this mock component needs the amp-sidebar script
  </div>
  <div>
    this mock component needs the amp-social-share script
  </div>
  <div>
    this mock component needs the amp-soundcloud script
  </div>
  <div>
    this mock component needs the amp-springboard-player script
  </div>
  <div>
    this mock component needs the amp-sticky-ad script
  </div>
  <div>
    this mock component needs the amp-twitter script
  </div>
  <div>
    this mock component needs the amp-user-notification script
  </div>
  <div>
    this mock component needs the amp-video script
  </div>
  <div>
    this mock component needs the amp-vimeo script
  </div>
  <div>
    this mock component needs the amp-vine script
  </div>
  <div>
    this mock component needs the amp-youtube script
  </div>
  <div>
    this mock component needs the amp-some-made-up-thing script
  </div>
</DocumentFragment>
`;

exports[`scripts supports all expected scripts mock head renders expected amp scripts 1`] = `
<DocumentFragment>
  <script
    async=""
    custom-element="amp-access"
    src="https://cdn.ampproject.org/v0/amp-access-0.1.js"
  />
  <script
    async=""
    custom-element="amp-accordion"
    src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"
  />
  <script
    async=""
    custom-element="amp-ad"
    src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"
  />
  <script
    async=""
    custom-element="amp-analytics"
    src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
  />
  <script
    async=""
    custom-element="amp-anim"
    src="https://cdn.ampproject.org/v0/amp-anim-0.1.js"
  />
  <script
    async=""
    custom-element="amp-audio"
    src="https://cdn.ampproject.org/v0/amp-audio-0.1.js"
  />
  <script
    async=""
    custom-element="amp-brid-player"
    src="https://cdn.ampproject.org/v0/amp-brid-player-0.1.js"
  />
  <script
    async=""
    custom-element="amp-brightcove"
    src="https://cdn.ampproject.org/v0/amp-brightcove-0.1.js"
  />
  <script
    async=""
    custom-element="amp-carousel"
    src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"
  />
  <script
    async=""
    custom-element="amp-consent"
    src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"
  />
  <script
    async=""
    custom-element="amp-dailymotion"
    src="https://cdn.ampproject.org/v0/amp-dailymotion-0.1.js"
  />
  <script
    async=""
    custom-element="amp-dynamic-css-classes"
    src="https://cdn.ampproject.org/v0/amp-dynamic-css-classes-0.1.js"
  />
  <script
    async=""
    custom-element="amp-embed"
    src="https://cdn.ampproject.org/v0/amp-embed-0.1.js"
  />
  <script
    async=""
    custom-element="amp-experiment"
    src="https://cdn.ampproject.org/v0/amp-experiment-0.1.js"
  />
  <script
    async=""
    custom-element="amp-facebook-comments"
    src="https://cdn.ampproject.org/v0/amp-facebook-comments-0.1.js"
  />
  <script
    async=""
    custom-element="amp-facebook"
    src="https://cdn.ampproject.org/v0/amp-facebook-0.1.js"
  />
  <script
    async=""
    custom-element="amp-fit-text"
    src="https://cdn.ampproject.org/v0/amp-fit-text-0.1.js"
  />
  <script
    async=""
    custom-element="amp-font"
    src="https://cdn.ampproject.org/v0/amp-font-0.1.js"
  />
  <script
    async=""
    custom-element="amp-form"
    src="https://cdn.ampproject.org/v0/amp-form-0.1.js"
  />
  <script
    async=""
    custom-element="amp-fx-flying-carpet"
    src="https://cdn.ampproject.org/v0/amp-fx-flying-carpet-0.1.js"
  />
  <script
    async=""
    custom-element="amp-gfycat"
    src="https://cdn.ampproject.org/v0/amp-gfycat-0.1.js"
  />
  <script
    async=""
    custom-element="amp-iframe"
    src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
  />
  <script
    async=""
    custom-element="amp-image-lightbox"
    src="https://cdn.ampproject.org/v0/amp-image-lightbox-0.1.js"
  />
  <script
    async=""
    custom-element="amp-instagram"
    src="https://cdn.ampproject.org/v0/amp-instagram-0.1.js"
  />
  <script
    async=""
    custom-element="amp-install-serviceworker"
    src="https://cdn.ampproject.org/v0/amp-install-serviceworker-0.1.js"
  />
  <script
    async=""
    custom-element="amp-izlesene"
    src="https://cdn.ampproject.org/v0/amp-izlesene-0.1.js"
  />
  <script
    async=""
    custom-element="amp-jwplayer"
    src="https://cdn.ampproject.org/v0/amp-jwplayer-0.1.js"
  />
  <script
    async=""
    custom-element="amp-kaltura-player"
    src="https://cdn.ampproject.org/v0/amp-kaltura-player-0.1.js"
  />
  <script
    async=""
    custom-element="amp-lightbox"
    src="https://cdn.ampproject.org/v0/amp-lightbox-0.1.js"
  />
  <script
    async=""
    custom-element="amp-list"
    src="https://cdn.ampproject.org/v0/amp-list-0.1.js"
  />
  <script
    async=""
    custom-element="amp-live-list"
    src="https://cdn.ampproject.org/v0/amp-live-list-0.1.js"
  />
  <script
    async=""
    custom-element="amp-mustache"
    src="https://cdn.ampproject.org/v0/amp-mustache-0.1.js"
  />
  <script
    async=""
    custom-element="amp-o2-player"
    src="https://cdn.ampproject.org/v0/amp-o2-player-0.1.js"
  />
  <script
    async=""
    custom-element="amp-pinterest"
    src="https://cdn.ampproject.org/v0/amp-pinterest-0.1.js"
  />
  <script
    async=""
    custom-element="amp-playbuzz"
    src="https://cdn.ampproject.org/v0/amp-playbuzz-0.1.js"
  />
  <script
    async=""
    custom-element="amp-reach-player"
    src="https://cdn.ampproject.org/v0/amp-reach-player-0.1.js"
  />
  <script
    async=""
    custom-element="amp-reddit"
    src="https://cdn.ampproject.org/v0/amp-reddit-0.1.js"
  />
  <script
    async=""
    custom-element="amp-sidebar"
    src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"
  />
  <script
    async=""
    custom-element="amp-social-share"
    src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"
  />
  <script
    async=""
    custom-element="amp-soundcloud"
    src="https://cdn.ampproject.org/v0/amp-soundcloud-0.1.js"
  />
  <script
    async=""
    custom-element="amp-springboard-player"
    src="https://cdn.ampproject.org/v0/amp-springboard-player-0.1.js"
  />
  <script
    async=""
    custom-element="amp-sticky-ad"
    src="https://cdn.ampproject.org/v0/amp-sticky-ad-1.0.js"
  />
  <script
    async=""
    custom-element="amp-twitter"
    src="https://cdn.ampproject.org/v0/amp-twitter-0.1.js"
  />
  <script
    async=""
    custom-element="amp-user-notification"
    src="https://cdn.ampproject.org/v0/amp-user-notification-0.1.js"
  />
  <script
    async=""
    custom-element="amp-video"
    src="https://cdn.ampproject.org/v0/amp-video-0.1.js"
  />
  <script
    async=""
    custom-element="amp-vimeo"
    src="https://cdn.ampproject.org/v0/amp-vimeo-0.1.js"
  />
  <script
    async=""
    custom-element="amp-vine"
    src="https://cdn.ampproject.org/v0/amp-vine-0.1.js"
  />
  <script
    async=""
    custom-element="amp-youtube"
    src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"
  />
</DocumentFragment>
`;

exports[`scripts with a connected multiple script component mock body renders component 1`] = `
<DocumentFragment>
  <div>
    this mock video component needs multiple scripts
  </div>
</DocumentFragment>
`;

exports[`scripts with a connected multiple script component mock head renders expected amp scripts 1`] = `
<DocumentFragment>
  <script
    async=""
    custom-element="amp-youtube"
    src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"
  />
  <script
    async=""
    custom-element="amp-brightcove"
    src="https://cdn.ampproject.org/v0/amp-brightcove-0.1.js"
  />
  <script
    async=""
    custom-element="amp-dailymotion"
    src="https://cdn.ampproject.org/v0/amp-dailymotion-0.1.js"
  />
</DocumentFragment>
`;

exports[`scripts with a connected single script component mock body renders component 1`] = `
<DocumentFragment>
  <div>
    this mock component needs the amp-youtube script
  </div>
</DocumentFragment>
`;

exports[`scripts with a connected single script component mock head renders expected amp script 1`] = `
<DocumentFragment>
  <script
    async=""
    custom-element="amp-youtube"
    src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"
  />
</DocumentFragment>
`;

exports[`scripts with a provider and no scripts AmpScripts component renders nothing 1`] = `<DocumentFragment />`;

exports[`scripts with multiple duplicate script components mock body renders components 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        this mock component needs the amp-youtube script
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        this mock component needs the amp-youtube script
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        this mock component needs the amp-youtube script
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`scripts with multiple duplicate script components mock head renders expected amp script once 1`] = `
<DocumentFragment>
  <script
    async=""
    custom-element="amp-youtube"
    src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"
  />
</DocumentFragment>
`;

exports[`scripts with no provider AmpScripts component renders nothing 1`] = `<DocumentFragment />`;
